--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 esp32-hal = "0.7.0"
 esp-backtrace = { version = "0.4.0", features = ["esp32", "panic-handler", "print-uart"] }
 xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
+esp-println = { version = "0.3.1", features = ["esp32"] }
 
 [features]
 default = ["rt"]
