--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ esp32-hal = "0.7.0"
 esp-backtrace = { version = "0.4.0", features = ["esp32", "panic-handler", "print-uart"] }
 xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
 esp-println = { version = "0.3.1", features = ["esp32"] }
+embedded-hal = "0.2.7"
+fugit = "0.3.6"
 
 [features]
 default = ["rt"]
