--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
 esp-println = { version = "0.3.1", features = ["esp32"] }
 embedded-hal = "0.2.7"
 fugit = "0.3.6"
+shared-bus = "0.2.5"
 
 [features]
 default = ["rt"]
