--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "fridge_tap_list"
+name = "test"
 version = "0.1.0"
-authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
+authors = ["Patrik Emilsson <patrik@famemilsson.se>"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 esp32c3-hal = "0.5.0"
 esp-backtrace = { version = "0.4.0", features = ["esp32c3", "panic-handler", "print-uart"] }
 riscv-rt = { version = "0.11", optional = true }
-esp-println = { version = "0.3.1", features = ["esp32c3"] }
-embedded-hal = "0.2.7"
-fugit = "0.3.6"
-hex-literal = "0.3.4"
-shared-bus = "0.2.5"
 
 [features]
 default = ["rt"]
