--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,17 +1,35 @@
-[target.riscv32imac-unknown-none-elf]
-runner = "espflash --monitor"
+[target.riscv32imc-unknown-none-elf]
+
+#[target.riscv32imc-esp-espidf]
+runner = "espflash flash --baud=921600 --monitor /dev/cu.usbmodem124401"
 
 [build]
 rustflags = [
+  # enable the atomic codegen option for RISCV
+  "-C", "target-feature=+a",
+
+  # Tell the `core` library that we have atomics, even though it's not
+  # specified in the target definition
+  "--cfg", "target_has_atomic_load_store",
+  "--cfg", 'target_has_atomic_load_store="8"',
+  "--cfg", 'target_has_atomic_load_store="16"',
+  "--cfg", 'target_has_atomic_load_store="32"',
+  "--cfg", 'target_has_atomic_load_store="ptr"',
+  "--cfg", "target_has_atomic",
+  "--cfg", 'target_has_atomic="8"',
+  "--cfg", 'target_has_atomic="16"',
+  "--cfg", 'target_has_atomic="32"',
+  "--cfg", 'target_has_atomic="ptr"',
+
   # Required to obtain backtraces (e.g. when using the "esp-backtrace" crate.)
   # NOTE: May negatively impact performance of produced code
   "-C", "force-frame-pointers",
-  "-C", "link-arg=-Tlinkall.x",
+  "-C", "link-arg=-Tlinkall.x"
 ]
-target = "riscv32imac-unknown-none-elf"
+target = "riscv32imc-unknown-none-elf"
 
 [unstable]
-build-std = ["core"]
+build-std = ["core","alloc"]
 
 [rust]
 lld = true
